# raman-mda-engine

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: conf.py  contributing.md  index.md
examples/: basic.py  with-notebook.ipynb
raman_mda_engine/: __init__.py  _engine.py  _error_handling.py  _events.py  _writers.py  utils.py
raman_mda_engine/aiming/: __init__.py  _sources.py  transformers.py  util.py
tests/: conftest.py  test-config.cfg  test_raman_mda_engine.py  test_tranformers.py
