[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]


# https://peps.python.org/pep-0621/
[project]
name = "raman-mda-engine"
description = "pymmcore-plus mda engine for running spontaneous raman experiments."
keywords = ["microscope", "micro-manager", "raman", "multi-processing", "pymmcore-plus"]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD 3-Clause License" }
authors = [
    { name = "Ian Hunt-Isaak", email = "ianhuntisaak@gmail.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Utilities",
]

dependencies = [
    "mda-simulator",
    "napari-broadcastable-points>=0.2.0",
    "pymmcore-mda-writers",
    "pymmcore-plus>=0.4.0",
    "shapely",
    "qtpy",
    "wrapt",
]

dynamic = ["version"]

[project.optional-dependencies]
testing = ["PyQt5", "pytest", "pytest-cov", "pytest-qt", "qtpy"]
dev = [
    "black",
    "ipython",
    "mypy",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "rich",
    "ruff",
]


[tool.pytest.ini_options]
addopts = [
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--ignore-glob=docs/examples/*.py",
]

[tool.mypy]
files = "raman_mda_engine"
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
implicit_reexport = false
# this is strict!
# disallow_untyped_defs = true
show_column_numbers = true
show_error_codes = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = [
    "E",    # style errors
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",   # pyupgrade
    # "N",  # pep8-naming
    # "S",  # bandit
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D400", # First line should end with a period
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
    "C901", # Function is too complex
    "D102", # Missing docstring in public method - ignore because doesn't work with inheritance
            # https://github.com/charliermarsh/ruff/issues/2413
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D"]
"docs/conf.py" = ["A001"]
